# titorelli

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yaml
src/: kafka.rs  lib.rs  messages.rs
